@@ -20,7 +20,7 @@ libglide_a_SOURCES = glide.f90 glide_setup.f90 glide_types.f90 glide_temp.f90 gl
                 glide_nc_custom.f90 isostasy.f90 isostasy_el.f90 isostasy_setup.f90 isostasy_types.f90
 libglint_a_SOURCES = glint_climate.f90 glint_initialise.f90 glint_io.f90 glint_timestep.f90 glint_type.f90 \
 		glint.f90 glint_proj.f90 glint_interp.f90 glint_global_grid.f90 glint_precip_param.f90 \
-                glint_mbal.f90 glint_constants.f90 glint_gmt.f90 
+                glint_mbal.f90 glint_constants.f90 glint_gmt.f90 glint_mbal_coupling.f90
 libclimate_a_SOURCES = simple_forcing.f90 eis_forcing.f90 eis_ela.f90 eis_temp.f90 eis_slc.f90 eis_cony.f90 glimmer_searchcircle.f90 eis_io.f90 eis_types.f90
 
 simple_glide_SOURCES = simple_glide.f90 
